--- a/static/keer.css
+++ b/static/keer.css
@@ -87,6 +87,8 @@ body {
   text-align: left;
   font-size: small;
   margin-left: -10px;
+  text-decoration: none;
+  color: white;
 }
 .tile.hcolumn {
   border-color: white;
