--- a/static/keer.css
+++ b/static/keer.css
@@ -6,82 +6,20 @@
   }
 }
 
+/* Main structure */
 .container {
-  display: flex;
-}
-.rcrow {
-  display: flex;
-  height: 30px;
-}
-.rcrow > div {
-  line-height: 25px !important;
-  width: 30px;
+  width: 700px;
+  display: grid;
+  grid-template-columns: [main] 1fr [sidebar] 175px;
 }
 
-.rcrow > div > div {
-  width: 30px;
-  height: 100%;
-}
-.scoretoprow {
-  margin-top: 6px;
-}
-.scorerow {
-  display: flex;
-  height: 30px;
-}
-.scoreheader {
-  width: 56px;
-  text-align: right;
-  line-height: 30px;
-}
-.scorevalue {
-  background-color: white;
-  width: 64px;
-  margin-left: 6px;
-  margin-bottom: 2px;
-  border-radius: 10px;
-}
 body {
   background-color: lightgrey;
   font-weight: 900;
   text-align: center;
   font-family: sans-serif;
 }
-.maingrid {
-  width: 540px;
-}
-.row {
-  height: 30px;
-  display: flex;
-  padding: 0px;
-  margin: 0px;
-  color: white;
-}
-.headertile {
-  background-color: white !important;
-  color: black;
-  border-width: 0px !important;
-}
-.headertile.hcolumn {
-  color: red;
-}
-.symbol {
-  filter: grayscale(50%);
-  filter: opacity(25%);
-}
 
-.headertile {
-  line-height: 25px !important;
-}
-.row > div {
-  flex-basis: 100%;
-  border: 2px solid black;
-  line-height: 21px;
-}
-.notile {
-  border-width: 0px !important;
-  margin: 0px;
-}
 .seed {
   position: absolute;
   text-align: left;
@@ -90,70 +28,93 @@ body {
   text-decoration: none;
   color: white;
 }
-.tile.hcolumn {
-  border-color: white;
+
+/* Score sidebar*/
+
+.rightcolumn {
+  grid-row: span 2;
+  display: grid;
+  grid-template-columns: 1fr 32px 32px;
 }
-.row > div > div {
-  height: 100%;
+.rightcolumn > * {
+  height: 25px;
+  white-space: nowrap;
 }
-.hearts {
-  font-size: x-large;
+.scoretoprow {
+  margin-top: 6px;
+}
+.scorerow {
+  height: 30px;
+}
+.scoreheader {
+  width: 100px;
+  text-align: right;
   line-height: 30px;
-  margin-left: 10px;
-  margin-right: -12px;
-  margin-top: 6px;
 }
-.boxrow {
-  height: 30px;
-  display: flex;
-  padding: 0px;
-  margin: 0px;
-  margin-left: 56px;
-  margin-right: 28px;
-  color: black;
-  margin-top: 6px;
-  align-items: center;
-}
-.boxrow > div {
-  width: 25px;
-  height: 25px;
-  margin-left: 6px;
-  margin-right: 6px;
-  font-weight: bolder;
-  font-size: large;
-}
-.boxrow > div:first-child {
-  border: 1.5px solid black;
-  border-radius: 50%;
-}
-.wildcardrow {
+.scorevalue {
+  grid-column: span 2;
   background-color: white;
-  height: 30px;
-  display: flex;
+  width: 64px;
+  margin-left: 6px;
+  margin-bottom: 2px;
+  border-radius: 10px;
+}
+
+/* Top header */
+
+.plaatjes {
   padding: 0px;
   margin: 0px;
-  margin-left: 56px;
-  margin-right: 228px;
-  color: black;
-  border-radius: 5px;
-  margin-top: 6px;
-  align-items: center;
+  color: white;
+  width: 100%;
 }
-.wildcardrow > div {
-  border: 1px solid black;
-  border-radius: 50%;
-  width: 25px;
-  height: 25px;
-  margin-left: 6px;
-  margin-right: 6px;
-  font-weight: bolder;
-  font-size: x-large;
+.plaatjes > img {
+  width: 50%;
+  margin: -25px;
+}
+.plaatjes .header {
+  margin-left: -100px;
+}
+
+/* Main playing grid */
+.maingrid {
+  width: 540px;
+  display: grid;
+  grid-template-columns: repeat(18, 1fr);
+}
+
+.headertile {
+  background-color: white !important;
+  color: black;
+  border-width: 0px !important;
+}
+.headertile.hcolumn {
+  color: red;
+}
+
+.headertile {
+  color: black;
+  line-height: 25px !important;
+}
+.scoretile {
+  color: white;
+  border: 2px solid black;
+}
+
+.notile {
+  border-width: 0px !important;
+  margin: 0px;
+}
+
+.tile.hcolumn {
+  border-color: white !important;
 }
 
 .tile {
   margin: 0.5px;
   border-radius: 5px;
   padding: 1px;
+  line-height: 21px;
 }
 .tile > div {
   border-radius: 5px;
@@ -187,4 +148,68 @@ body {
 }
 .tile-orange > div {
   background-color: hsl(30, 80%, 60%);
+}
+
+/* Symbols etc */
+@font-face {
+  font-family: "OpenMoji";
+  src: URL("static/OpenMoji-Color.SVG.ttf") format("truetype");
+}
+.hearts img {
+  width: 30px;
+}
+.symbol {
+  font-family: "OpenMoji";
+  filter: grayscale(50%);
+  filter: opacity(25%);
+}
+.hearts {
+  font-size: x-large;
+  line-height: 30px;
+  margin-left: 10px;
+  margin-right: -12px;
+  margin-top: 6px;
+}
+.boxrow {
+  grid-column: 3 / span 16;
+  height: 30px;
+  padding: 0px;
+  margin: 0px;
+  color: black;
+  margin-top: 6px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.boxrow > div {
+  width: 25px;
+  height: 25px;
+  margin-left: 6px;
+  margin-right: 6px;
+  font-weight: bolder;
+  font-size: large;
+}
+.boxrow > div:first-child {
+  border: 1.5px solid black;
+  border-radius: 50%;
+}
+.wildcardrow {
+  grid-column: 3 / span 16;
+  background-color: white;
+  width: 260px;
+  height: 30px;
+  color: black;
+  border-radius: 5px;
+  margin-top: 6px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.wildcardrow > div {
+  border: 1px solid black;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  font-weight: bolder;
+  font-size: x-large;
 }
