--- a/template/template.html
+++ b/template/template.html
@@ -11,7 +11,7 @@
       <a class="motto" href="?seed={{seed}}" style="grid-column: span 2"
         ><div class="plaatjes">
           <img class="header" src="static/header.png" />
-          <img src="static/frame1.png" /></div
+          <img src="static/frame{{motto}}.png" style="margin-bottom: {{bottom}}px" /></div
       ></a>
       {% include 'maingrid.html' %}{% include 'rightcolumn.html' %}
     </div>
@@ -19,7 +19,7 @@
       <a class="motto" href="?seed={{seed}}" style="grid-column: span 2"
         ><div class="plaatjes">
           <img class="header" src="static/header.png" />
-          <img src="static/frame1.png" /></div
+          <img src="static/frame{{motto}}.png" style="margin-bottom: {{bottom}}px" /></div
       ></a>
       {% include 'maingrid.html' %}{% include 'rightcolumn.html' %}
     </div>
