--- a/template/rightcolumn.html
+++ b/template/rightcolumn.html
@@ -20,7 +20,7 @@
   <div class="scorevalue">&nbsp</div>
   <div class="scoreheader">Toobss (<img src="static/toob.png" />×2)</div>
   <div class="scorevalue">&nbsp</div>
-  <div class="scoreheader">Concu's (<img src="static/star-black.png" />×-2</div>
+  <div class="scoreheader" style="margin-left: -8px">Concu's (<img src="static/star-black.png" />×-2)</div>
   <div class="scorevalue">&nbsp</div>
   <div class="scoreheader">Totaal</div>
   <div class="scorevalue">&nbsp</div>
