--- a/static/keer.css
+++ b/static/keer.css
@@ -47,15 +47,16 @@ body {
   height: 30px;
 }
 .scoreheader {
-  width: 100px;
+  width: 100%;
   text-align: right;
   line-height: 30px;
+  padding-right: 2px;
 }
 .scorevalue {
   grid-column: span 2;
   background-color: white;
   width: 64px;
-  margin-left: 6px;
+  margin-left: 2px;
   margin-bottom: 2px;
   border-radius: 10px;
 }
